--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,5 +24,5 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 [plugins]
 androidGradleApplication = { id = "com.android.application", version = "8.2.2" }
 androidGradleLibrary = { id = "com.android.library", version = "8.2.2" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version = "0.6.1" }
