--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,29 @@
 [versions]
-kotlin = "1.9.23"
 awaitilityKotlin = "4.2.0"
-gson = "2.10"
 junit = "4.13.2"
+kotlin = "1.9.23"
+kotlinx-serialization = "1.6.3"
 coroutines = "1.6.4"
 mockitoKotlin = "5.0.0"
 mockserverNetty = "5.14.0"
 okhttpSse = "4.11.0"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 
 [libraries]
 awaitility-kotlin = { module = "org.awaitility:awaitility-kotlin", version.ref = "awaitilityKotlin" }
-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 mockserver-netty = { module = "org.mock-server:mockserver-netty-no-dependencies", version.ref = "mockserverNetty" }
 okhttp-sse = { module = "com.squareup.okhttp3:okhttp-sse", version.ref = "okhttpSse" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-converter-kotlinxSerialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
 
 [plugins]
 androidGradleApplication = { id = "com.android.application", version = "8.2.2" }
 androidGradleLibrary = { id = "com.android.library", version = "8.2.2" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version = "0.6.1" }
