--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,14 @@
 [versions]
 awaitilityKotlin = "4.2.0"
+coroutines = "1.7.3"
 junit = "4.13.2"
 kotlin = "1.9.23"
 kotlinx-serialization = "1.6.3"
 ktor = "2.3.12"
-coroutines = "1.7.3"
 mockitoKotlin = "5.0.0"
 mockserverNetty = "5.14.0"
 okhttpSse = "4.11.0"
+okio = "3.9.1"
 retrofit = "2.11.0"
 
 [libraries]
@@ -26,6 +27,7 @@ ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", 
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 mockserver-netty = { module = "org.mock-server:mockserver-netty-no-dependencies", version.ref = "mockserverNetty" }
 okhttp-sse = { module = "com.squareup.okhttp3:okhttp-sse", version.ref = "okhttpSse" }
+okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-kotlinxSerialization = { module = "com.squareup.retrofit2:converter-kotlinx-serialization", version.ref = "retrofit" }
 
