--- a/.github/actions/prepare-gradle/action.yml
+++ b/.github/actions/prepare-gradle/action.yml
@@ -4,7 +4,7 @@ description: ""
 inputs:
   java-version:
     description: "Java Version"
-    default: "11"
+    default: "17"
   distribution:
     description: "Java Distribution"
     default: "temurin"
@@ -12,12 +12,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Setup JDK 11
-      uses: actions/setup-java@v3
+    - name: Setup Java
+      uses: actions/setup-java@v4
       with:
         java-version: ${{ inputs.java-version }}
         distribution: ${{ inputs.distribution }}
-        cache: gradle
-    - name: Grant execute permission for gradlew
-      shell: bash
-      run: chmod +x gradlew
+
+    - name: Gradle
+      uses: gradle/actions/setup-gradle@v4
