--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: 17
-
       - name: Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: ./.github/actions/prepare-gradle
 
       - name: Publish
         run: gradle check publish --no-configure-on-demand --no-daemon
